<resources>
    <string name="app_name">NeoSavings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="menu_presupuestos">Presupuestos</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="menu_pagosProgramados">Pagos Programados</string>
    <string name="menu_registros">Registros</string>
    <string name="menu_cuentas">Lista de Cuentas</string>
    <string name="menu_deudas">Deudas y Préstamos</string>
    <string name="menu_objetivos">Objetivos</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_importar">Exportar\Importar Datos</string>
    <string name="menu_exportar">Compartir Gastos</string>
    <string name="String_Add">ADD</string>
    <string name="title_activity_formulario_registro">Formulario_Registro</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="String_Coste">Coste</string>
    <string name="String_Empty">0.00</string>
    <string name="String_Back">Back</string>
    <string name="String_OK">OK</string>
    <string name="String_Cuentas">Cuentas</string>
    <string name="String_Descripcion">Descripción</string>
    <string name="String_Fecha">dd/MM/yyyy</string>
    <string name="String_Categoria">Categoría</string>
    <string name="String_Imagen">Imagen</string>
    <string name="fecha">Fecha</string>
    <string name="gasto">GASTO</string>
    <string name="ingreso">INGRESO</string>
    <string name="todo">TODO</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="String_CrearCuenta">Crear Cuenta</string>
    <string name="String_CrearFormulario">Crear Formulario</string>
    <string name="String_NombreCuenta">Nombre de la Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="String_Saldo">Saldo Actual:</string>
    <string name="title_activity_registro_info">RegistroInfo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="String_EditarRegistro">Editar Registro</string>
    <string name="String_NotFound">Not Found</string>
    <string name="String_Save">Guardar</string>
    <string name="String_Entre">Entre</string>
    <string name="String_Buscar">Buscar</string>
    <string name="String_SaldoInicial">Saldo Inical</string>
    <string name="String_SaldoFinal">Saldo Final</string>
    <string name="String_Ingresos">Ingresos</string>
    <string name="String_Gastos">Gastos</string>
    <string name="String_Total">Total</string>
    <string name="String_EstructuraGastos">Estructura de Gastos</string>
    <string name="saldo">Saldo</string>
    <string name="resumen">Resumen</string>
    <string name="String_EstructuraIngresos">Estructura de Ingresos</string>
    <string name="String_Neosavings">NeoSavings Utilities</string>
    <string name="String_FechaIni">Fecha Inicio</string>
    <string name="String_FechaFin">Fecha Fin</string>
    <string name="String_Edit">Editar</string>
    <string name="tipo">Tipo</string>
    <string name="valor_inicial">Valor Inicial</string>
    <string name="String_FormaPago">Forma de Pago</string>
    <string name="neoskills">NeoSkills</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="String_Periocidad">Periocidad</string>
    <string name="String_Recordatorio">Recordatorio</string>
    <string name="String_Notificaciones">Notificaciones</string>
    <string name="String_FechaVencimiento">Fecha de Vencimiento</string>
    <string name="a_quien_ha_prestado">¿A quien ha prestado?</string>
    <string name="para_qu_era">¿Para qué era?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="prestamo">PRESTAMO</string>
    <string name="deuda">DEUDA</string>
    <string name="prestamos">PRESTAMOS</string>
    <string name="deudas">DEUDAS</string>
    <string name="a_adir_pago">AÑADIR PAGO</string>
    <string name="acci_n">Acción</string>
    <string name="cantidad">Cantidad</string>
    <string name="activos">ACTIVOS</string>
    <string name="pausados">PAUSADOS</string>
    <string name="concluidos">CONCLUIDOS</string>
    <string name="_0_00">0.00 %</string>
    <string name="concluir">CONCLUIR</string>
    <string name="a_adir">Añadir</string>
    <string name="cantidad_ahorrada">Cantidad Ahorrada</string>
    <string name="cantidad_objetivo">Cantidad Objetivo</string>
    <string name="cantidad_ya_ahorrado">Cantidad ya ahorrado</string>
    <string name="cu_l_es_tu_objetivo">¿Cuál es tu objetivo?</string>
    <string name="enhorabuena">ENHORABUENA!!!</string>
    <string name="exportar_importar_datos">Exportar - Importar Datos</string>
    <string name="String_ExplicaciónImportar">Seleccione un archivo backup anterior</string>
    <string name="String_ExplicaciónExportar">Se generará un archivo en la carpeta de descargas</string>
    <string name="utilities">Utilities</string>
    <string name="registros_ayuda">REGISTROS</string>
    <string name="estad_sticas_ayuda">ESTADÍSTICAS</string>
    <string name="usuarios_ayuda">USUARIOS</string>
    <string name="home_ayuda">HOME</string>
    <string name="home">HOME</string>
    <string name="deudas_y_n_pr_stamos">DEUDAS Y \n PRÉSTAMOS</string>
    <string name="pagos_n_programados_ayuda">PAGOS \n PROGRAMADOS</string>
    <string name="objetivos_ayuda">OBJETIVOS</string>
    <string name="title_activity_ayuda_home">Ayuda_Home</string>
    <string name="wednesday">Wednesday</string>
    <string name="informacion_ngeneral">Informacion\nGeneral</string>
    <string name="navegacion">Navegacion</string>
    <string name="notificaciones">Notificaciones</string>
</resources>